test/resources/parser/failing/BadValBis.scala
object BadValIf
    (1 + val x: Int(32) = 2; x)
end BadValIf